# raytracinginoneweekendincuda

./: .gitignore  CMakeLists.txt  Claude_export_Optimizing ray tracing with CUDA parallelization_e87f3d49-02e3-4dcd-9498-55d60476fded.md  IMPLEMENTATION_GUIDE.md  Makefile  README.md  benchmark.sh  camera.h  hitable.h  hitable_list.h  implementation_plan.md.resolved  material.h  ray.h  sphere.h  vec3.h  walkthrough.md.resolved
include/: aabb.h  denoiser.h  lbvh.h  multigpu.h  ray_state.h  wavefront.h
src/: denoiser.cu  lbvh.cu  main_accel.cu  multigpu.cu  sphere.cu  wavefront.cu
